integrates/deploy/development/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: integrates-__DEPLOYMENT_NAME__
  namespace: development
spec:
  replicas: 1
  selector:
    matchLabels:
      app: integrates-__DEPLOYMENT_NAME__
  template:
    metadata:
      labels:
        app: integrates-__DEPLOYMENT_NAME__
    spec:
      nodeSelector:
        worker_group: development
      containers:
        - name: integrates
          image: registry.gitlab.com/fluidattacks/product/integrates/back:__DEPLOYMENT_NAME__
          imagePullPolicy: Always
          command: [integrates-back]
          args: [eph]
          resources:
            requests:
              cpu: 600m
              memory: 1000Mi
            limits:
              cpu: 4000m
              memory: 2000Mi
          ports:
            - containerPort: 8001
          readinessProbe:
            exec:
              command:
                - integrates-back-probes-readiness
                - integrates-dev
                - FluidIntegrates
                - http://localhost:8001
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 30
          livenessProbe:
            exec:
              command:
                - integrates-back-probes-liveness
                - integrates-dev
                - FluidIntegrates
                - http://localhost:8001
                - https://__BRANCH__.integrates.fluidattacks.com
            initialDelaySeconds: 0
            periodSeconds: 30
            successThreshold: 1
            failureThreshold: 40
            timeoutSeconds: 30
        - name: db
          image: registry.gitlab.com/fluidattacks/product/integrates/db:__DEPLOYMENT_NAME__
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 600m
              memory: 500Mi
            limits:
              cpu: 4000m
              memory: 1000Mi
        - name: cache
          image: registry.gitlab.com/fluidattacks/product/integrates/cache:__DEPLOYMENT_NAME__
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 600m
              memory: 500Mi
            limits:
              cpu: 4000m
              memory: 1000Mi
        - name: storage
          image: registry.gitlab.com/fluidattacks/product/integrates/storage:__DEPLOYMENT_NAME__
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 600m
              memory: 500Mi
            limits:
              cpu: 4000m
              memory: 1000Mi
